plugins {
    id 'java'
    id 'org.springframework.boot' version '2.5.6'
    id "io.spring.dependency-management" version "1.0.10.RELEASE"
}

group = 'camila'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
    implementation 'org.junit.jupiter:junit-jupiter:5.9.0'
    implementation 'org.osgi:org.osgi.core:6.0.0'
    implementation "io.springfox:springfox-boot-starter:3.0.0"
    testImplementation 'org.mock-server:mockserver-netty:5.14.0'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.7.3'
    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.2'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.projectlombok:lombok:1.18.24'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
}

test {
    useJUnitPlatform()
}
